tdf#128285 Only update Navigator heading tracking if document has focus

Change-Id: I8e4d9a7b80bdae32d83349db20058f2be62e02c1